# NussinovDM

./: Project.tex  README.md  baseline.cpp  baseline.hpp  bottomUp.cpp  bottomUp.hpp  main  main.cpp  main.exe.stackdump  optimized.cpp  optimized.hpp  parallel.cpp  parallel.hpp  prog  prog.sh  recursion.cpp  recursion.hpp  removedBranching.cpp  simd.cpp  simd.hpp  testCases.cpp  testCases.hpp  transp1mtr.cpp  transp2mtr.cpp  transp2mtr.hpp  variation.cpp  variation.hpp
.history/: baseline_20200223171333.cpp  baseline_20200223185329.cpp  baseline_20200223185344.cpp  baseline_20200223185346.cpp  baseline_20200224010117.cpp  baseline_20200224010259.cpp  bottomUp_20200223171232.cpp  bottomUp_20200223184154.cpp  bottomUp_20200223184951.cpp  bottomUp_20200223185456.cpp  bottomUp_20200224010136.cpp  bottomUp_20200224010302.cpp  bottomUp_20200224010321.cpp  main_20200223185108.cpp  main_20200223185201.cpp  main_20200223191714.cpp  main_20200223191721.cpp  main_20200311210751.cpp  main_20200311210856.cpp  (+306 more)
src/: .floo  CMakeLists.txt  TimingGPU.cu  TimingGPU.cuh  baseline.cpp  baseline.hpp  bottomUp.cpp  bottomUp.hpp  cases.hpp  cuda.cu  cuda1  cuda1seq.cu  cudaFinal.cu  cudaVers2.cu  cuda_2  main.cpp  optPar.cpp  optPar.hpp  optimized.cpp  optimized.hpp  parallel.hpp  prog.sh  recursion.cpp  recursionParallel.cpp  recursionParallel.hpp  removedBranching.cpp  removedBranching.hpp  simd.cpp  simd.hpp  test.cu  test.txt  testCases.cpp  testCases.hpp  transp2mtr.cpp
src/build2/: Makefile  cmake_install.cmake  main
src/stojanovski/: stojanovski.cuh  tests.cu
